testsuite/tests/parser/should_fail/ParserNoForallUnicode.stderr

ParserNoForallUnicode.hs:6:8: error: [GHC-25955]
    Illegal symbol ‘∀’ in type
    Suggested fix:
      Use ExplicitForAll
      to enable syntax: ∀ <tvs>. <type>
